# AIOS

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.en.md  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml
crates/aios-agent-runtime/: Cargo.toml
crates/aios-cli/: Cargo.toml
crates/aios-cli/src/: main.rs
crates/aios-daemon/: Cargo.toml
crates/aios-daemon/src/: main.rs
crates/aios-goal-kernel/: Cargo.toml
crates/aios-native-shell/: Cargo.toml
crates/aios-native-shell/src/: lib.rs
crates/aios-platform/: Cargo.toml
crates/aios-policy-kernel/: Cargo.toml
crates/aios-types/: Cargo.toml
docs/: ADAPTIVE_SHELL.md  ARCHITECTURE.md  CORE_OBJECTS.md  FINAL_PROJECT_STRUCTURE.md  HOMEPAGE_EFFECT.md  MVP_ROADMAP.md  NATIVE_OS_STRATEGY.md  PROJECT_STRUCTURE.md  TECH_STACK.md  UI_REFERENCE.md
examples/document-analysis/: README.md
examples/inventory-risk/: README.md
examples/quote-generation/: README.md
kernel/context-core/: README.md
kernel/goal-kernel/: README.md
kernel/policy-kernel/: README.md
plugins/browser/: README.md
plugins/database/: README.md
plugins/email/: README.md
plugins/enterprise/: README.md
plugins/file-system/: README.md
prototypes/shell-ui/: index.html  script.js  styles.css
runtime/agent-runtime/: README.md
runtime/execution-runtime/: README.md
runtime/model-runtime/: README.md
runtime/tool-runtime/: README.md
services/artifact-service/: README.md
services/audit-service/: README.md
services/identity-service/: README.md
services/sync-service/: README.md
shells/car-shell/: README.md
shells/desktop-shell/: README.md
shells/mobile-shell/: README.md
shells/shared-shell-kit/: README.md
shells/tablet-shell/: README.md
tests/: README.md
(+10 files in other folders)
